# bazel_error_prone_auto_value_annonations_collision

./: BUILD.bazel  README.md  WORKSPACE
java/com/google/gerrit/common/flogger/: NamedFluentLogger.java
